# uniffi-example

./: .gitignore  Makefile  README.md
app/uniffi-example/uniffi-example/: uniffi_exampleApp.swift
app/uniffi-example/uniffi-example.xcodeproj/: project.pbxproj
app/uniffi-example/uniffi-example.xcodeproj/project.xcworkspace/xcuserdata/jz.xcuserdatad/: UserInterfaceState.xcuserstate
app/uniffi-example/uniffi-example.xcodeproj/xcuserdata/jz.xcuserdatad/xcschemes/: xcschememanagement.plist
app/uniffi-example/uniffi-example/components/: DocumentPicker.swift  TableView.storyboard  TableView.swift
app/uniffi-example/uniffi-example/core/: shared_lib.swift
app/uniffi-example/uniffi-example/views/: Abc.swift  ContentView.swift  DbAndFsExampleView.swift  FetchExampleView.swift
scripts/: build-framework.sh  generate-bindings.sh
shared_lib/: Cargo.toml  uniffi-bindgen.rs
shared_lib/bindings/: shared_libFFI.h  shared_libFFI.modulemap
shared_lib/src/: fs.rs  lib.rs  lib.udl  request.rs  sqlite.rs
