[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
rusqlite = {version = "0.30.0", features=["bundled"] }
uniffi = { version = "0.25.3", features = ["build", "bindgen", "tokio"] }

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build", "bindgen"] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
