[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = {version = "0.30.0", features=["bundled"] }
uniffi = { version = "0.25.3", features = ["cli", "build", "bindgen"] }
ureq = {version = "2.9.1", features = ["json"] }

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build", "bindgen"] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
