[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
uniffi = { version = "0.25.3", features = ["build", "cli"] }
ureq = { version = "2.9.1", features = ["json"] }

[build-dependencies]
uniffi = { version = "0.25.3", features = ["bindgen"] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
